# NFL-QB-Analysis

./: .gitignore  DEPLOY.md  QB_Diagnostics.py  README.md  README_STREAMLIT.md  check_2025.py  custom_qb_ratings_app.py  init_cloud_data.py  madden_style_ratings.ipynb  main.py  nfl_qb_analysis.ipynb  pyproject.toml  qb_madden_mini_app.py  qb_madden_streamlit.py  qb_ranking_model.ipynb  requirements.txt  streamlit_app.py  update_data.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: update_data.yml
.streamlit/: config.toml
Apps/: custom_qb_ratings_app.py
Initial Stuff/: Comprehensive_NFL_QB_Review.ipynb
Modeling/: custom_qb_rating_system.ipynb  qb_rating_model_v2.ipynb
Modeling/models/: .gitkeep  custom_qb_ratings.csv  model_metadata.pkl  qb_rating_elo_model.pkl  qb_rating_qbr_model.pkl
applications/: custom_qb_ratings_app.py
data_load/: CONTRACT_VALUE_ANALYSIS_GUIDE.md  DATABASE_TABLES_GUIDE.md  create_qb_contract_value_view.py  create_qb_plays_view.py  create_qb_season_stats_view.py  data_loading.py  load_pbp_to_db.py  qb_data_loading.ipynb  test_qb_database.ipynb
data_load/EDA/: contract_value_analysis.ipynb  nfl_qb_eda.ipynb  qb_context_isolation_exploration.ipynb
data_load/javascript_files/: script_1.js  script_11.js  script_12.js  script_14.js  script_16.js  script_17.js  script_19.js  script_2.js  script_21.js  script_23.js  (+8 more)
initial_stuff/: Comprehensive_NFL_QB_Review.ipynb  Comprehensive_NFL_QB_Review.py  qb_ranking_model.ipynb
modeling/: custom_qb_rating_system.ipynb  qb_rating_model.ipynb
(+2 files in other folders)
