[project]
name = "nfl-qb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "nflreadpy>=0.1.5",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]
