[project]
name = "nfl-qb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=6.31.0",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "nflreadpy>=0.1.5",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
]
