[project]
name = "nfl-qb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=6.31.0",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "nflreadpy>=0.1.5",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "streamlit>=1.52.0",
]
